Closed
Bug 235835
Opened 22 years ago
Closed 22 years ago
MathML: bad <math> block height && colors handling
Categories
(Core :: MathML, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: cstehlin.ml, Assigned: rbs)
Details
Attachments
(2 files)
|
1.24 KB,
application/xhtml+xml
|
Details | |
|
1.62 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent:
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.5) Gecko/20031007
. The height of the <math> block is smaller than the height of some contained
elements
. The mathbackground attribute on the math block overrides mathbrockground on
contained element.
See attached xhtml page.
Reproducible: Always
Steps to Reproduce:
warkaround : put an mstyle or row in the math block && style this enclosing
row/mstyle instead of styling <math>.
| Reporter | ||
Comment 1•22 years ago
|
||
That's because <math> is a sort of CSS box. It's height is computed the CSS way.
It is the height of its font box (that is, what you will get if you were to
remove all child elements). It is a counter-intuitive property of CSS.
Here is an example for illustration. Try this to see:
<span style="background-color:#AAAAAA">
Hello <span style="font-size:150%">x<sup>i</sup></span> World
</span>
| Reporter | ||
Comment 3•22 years ago
|
||
Thus, we should consider the height as normal. what about, the fact that the
bgcolor of the math block overrides bgcolors of sub-blcks ?
patch to paint the background like nsInlineFrame does - upshot of bug 36710.
Comment on attachment 143245 [details] [diff] [review]
fix the "z-index" of the background
Asking r/sr on this MathML patch where an overloaded Paint() method missed out
on some earlier changes from bug 36710.
Attachment #143245 -
Flags: superreview?(roc)
Attachment #143245 -
Flags: review?(roc)
Attachment #143245 -
Flags: superreview?(roc)
Attachment #143245 -
Flags: superreview+
Attachment #143245 -
Flags: review?(roc)
Attachment #143245 -
Flags: review+
checked in.
Status: UNCONFIRMED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•