paint the background of MathML frames like inline frames do, b=235835, r+sr=roc